t+hu:[[lényeg]] t+hu:[[micsoda]] t-balance t+hu:[[szerszám]] t+hu:[[izé]] t+hu:[[gond]] t+hu:[[probléma]] t+hu:[[holmi]] t+hu:[[cucc]] t+hu:[[dolog]] t+hu:[[létező dolog]] t+hu:[[ez-az]] t+hu:[[egy s más]] ([[WT:EDIT|Assisted]]) <thing#62455950>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -288,16 +288,18 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 {{trans-bottom}}
 
 {{trans-top|word, symbol, sign, or other referent that can be used to refer to any entity}}
+* Hungarian: {{t+|hu|ez-az}}, {{t|hu|egy s más}}
 * Indonesian: {{t+|id|sesuatu}}
-* Polish: {{t+|pl|coś|n}}
 {{trans-mid}}
+* Polish: {{t+|pl|coś|n}}
 {{trans-bottom}}
 
 {{trans-top|individual object or distinct entity}}
 * Asturian: {{t|ast|cosa|f}}
 * Cebuano: {{t|ceb|butang}}
-{{trans-mid}}
 * Finnish: {{t+|fi|esine}}
+{{trans-mid}}
+* Hungarian: {{t|hu|létező dolog}}
 * Indonesian: {{t+|id|benda}}
 * Latin: {{t+|la|res|f}}
 * Tocharian B: {{t|txb|wreme}}
@@ -313,6 +315,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Catalan: {{t+|ca|cosa|f}}
 * German: {{t+|de|Sache|f}}
 {{trans-mid}}
+* Hungarian: {{t+|hu|dolog}}
 * Japanese: {{t+|ja|物}}
 * Thai: {{t+|th|ทรัพย์}}
 {{trans-bottom}}
@@ -327,6 +330,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Catalan: {{t+|ca|efectes|m-p}}
 {{trans-mid}}
 * Finnish: {{t|fi|kamat|p}}
+* Hungarian: {{t+|hu|holmi}}, {{t+|hu|cucc}}
 {{trans-bottom}}
 
 {{trans-top|unit or container, usually containing edible goods}}
@@ -337,6 +341,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 {{trans-top|problem, dilemma, or complicating factor}}
 * Finnish: {{t+|fi|pulma}}
 {{trans-mid}}
+* Hungarian: {{t+|hu|gond}}, {{t+|hu|probléma}}
 * Indonesian: {{t+|id|masalah}}
 {{trans-bottom}}
 
@@ -344,8 +349,9 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Catalan: {{t+|ca|membre|m}}
 * Finnish: {{t+|fi|kalu}}, {{t+|fi|vehje}}
 * German: {{t+|de|Ding|n}}
-* Italian: {{t+|it|coso|m}}
+* Hungarian: {{t+|hu|micsoda}}, {{t+|hu|szerszám}}, {{t+|hu|izé}}
 {{trans-mid}}
+* Italian: {{t+|it|coso|m}}
 * Serbo-Croatian: {{t+|sh|onaj|alt=ona}} {{t+|sh|stvar|f}} (in this slang sense, always used with demonstrative pronoun 'ona')
 * Turkish: {{t+|tr|şey}}
 {{trans-bottom}}
@@ -368,6 +374,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Finnish: {{t+|fi|olennainen}} {{qualifier|adjective}}
 {{trans-mid}}
 * German: {{t+|de|Sache|f}}
+* Hungarian: {{t+|hu|lényeg}}
 * Indonesian: {{t+|id|hal}}
 * Turkish: {{t|tr|işin aslı}}, {{t+|tr|olay}}
 {{trans-bottom}}
@@ -375,6 +382,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 {{trans-top|situation surrounding a noun's referent}}
 * Finnish: {{t+|fi|juttu}}
 {{trans-mid}}
+* Hungarian: {{t+|hu|dolog}}, {{t+|hu|izé}}
 * Indonesian: {{t+|id|hal}}
 {{trans-bottom}}
 
