--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -917,6 +917,8 @@ From {{inh|non|gem-pro|*at|t=at, to}}. Cognate with {{cog|ang|æt}}, {{cog|ofs|e
 {{top2}}
 * {{desc|fo|at}}
 * {{desc|is|að}}
+* {{desc|no|åt}}
+* {{desc|sv|åt}}
 {{bottom}}
 
 ===References===
