--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -887,6 +887,7 @@ From {{inh|non|gem-pro|*þat|t=that}}. Cognate with {{cog|ang|þæt}}, {{cog|got
 {{top2}}
 * {{desc|fo|at}}
 * {{desc|is|að}}
+* {{desc|sv|att}}
 {{bottom}}
 
 ===Etymology 3===
