--- a/en/q/quadruped.4320.wikitext
+++ b/en/q/quadruped.4320.wikitext
@@ -47,7 +47,7 @@ Borrowed from {{bor|en|fr|quadrupède}}, from {{etyl|frm|en}}, from {{etyl|la|en
 *: Ancient: {{t|grc|τετράπουν|n}}
 * Hungarian: {{t+|hu|négylábú}}
 * Icelandic: {{t|is|ferfætlingur|m}}
-* Italian: {{t+|it|quadrupede}}
+* Italian: {{t+|it|quadrupede|m}}
 * Japanese: {{t|ja|四肢動物|tr=ししどうぶつ, shishi dōbutsu}}
 * Lao: {{t|lo|ສັດສີ່ຕີນ}}
 {{trans-mid}}
