--- a/en/m/malam.4517.wikitext
+++ b/en/m/malam.4517.wikitext
@@ -79,7 +79,7 @@ from {{inh|id|ms-cla|malam}}.
 * {{l|id|semalam}}
 
 ===Etymology 2===
-Borrowed from {{bor|id|jv|malam|tr={{l|jv|ꦩꦭꦩ꧀|tr=-}}|t=}}, probably from {{der|id|sa|मल}}. {{rfe|id}}
+Borrowed from {{bor|id|jv|malam|tr={{l|jv|ꦩꦭꦩ꧀|tr=-}}|t=}}, probably from {{der|id|gu|મલમ|t=ointment or paste made of wax}}, from {{der|id|fa|مرهم|tr=marham}}, from {{der|id|ar|مَرْهَم}}.
 
 ====Noun====
 {{id-noun}}
