--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -617,20 +617,29 @@ From {{der|fur|la|actus}}; cf. {{cog|it|atto}}.
 
 ==German==
 
-===Etymology===
+===Etymology 1===
 {{bor|de|en|at}}
 
-===Pronunciation===
+====Pronunciation====
 * {{IPA|de|/ɛt/}}
 
-===Noun===
+====Noun====
 {{de-noun|n|at|ats}}
 
 # [[#English|at]], [[at-sign]]
 #: {{syn|de|Klammeraffe}}
 
+===Etymology 2===
+
+====Noun====
+{{head|de|noun}}
+
+# {{lb|de|dated|physics}} {{abbreviation of|de|[[technische]] [[Atmosphäre]]|nodot=1}}, a non-[[SI]] unit of [[pressure]] used until 1978.
+#: {{cot|de|atü}}
+
 ===Further reading===
 * {{R:Duden|at_in_E_Mail_Adressen}}
+* {{R:Duden|at_Einheit_Druck_Atmosphaere}}
 
 ----
 
