--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -635,7 +635,7 @@ From {{der|fur|la|actus}}; cf. {{cog|it|atto}}.
 {{head|de|noun}}
 
 # {{lb|de|dated|physics}} {{abbreviation of|de|[[technische]] [[Atmosphäre]]|nodot=1}}, a non-[[SI]] unit of [[pressure]] used until 1978.
-#: {{cot|de|atü}}
+#: {{cot|de|atü|Pascal}}
 
 ===Further reading===
 * {{R:Duden|at_in_E_Mail_Adressen}}
