--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -42,7 +42,8 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 #*: Hi, Anne. Are you busy? &mdash; Hi, Anna. Yes. '''At''' 10 a.m. I am writing.
 #*:: {{audio|en|Hi, Anne. Are you busy - Hi, Anna. Yes. At 10 a.m. I am writing.ogg|Audio (US)}}
 # In the [[direction]] of (often in an unfocused or uncaring manner).
-#: {{ux|en|He threw the ball '''at''' me.&emsp; He shouted '''at''' her.}}
+#: {{ux|en|He threw the ball '''at''' me.}}
+#: {{ux|en|He shouted '''at''' her.}}
 #* {{RQ:Frgsn Zlnstn|IV}}
 #*: “My Continental prominence is improving,” I commented dryly. <br> Von Lindowe cut '''at''' a furze bush with his silver-mounted rattan. <br> “Quite so,” he said as dryly, his hand at his mustache. “I may say if your intentions were known your life would not be worth a curse.”
 # {{senseid|en|price}} {{n-g|Denotes a price.}}
@@ -51,9 +52,13 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 # [[occupy|Occupied]] in (activity).
 #: {{ux|en|men '''at''' work}}
 # In a state of.
-#: {{ux|en|She is [[at sixes and sevens|'''at''' sixes and sevens]] with him.&emsp; {{nowrap|They are [[at loggerheads|'''at''' loggerheads]] over how best to tackle the fiscal cliff.}}&emsp; {{nowrap|The city was [[at the mercy of|'''at''' the mercy of]] the occupying forces.}}}}
+#: {{ux|en|She is [[at sixes and sevens|'''at''' sixes and sevens]] with him.}}
+#: {{ux|en|They are [[at loggerheads|'''at''' loggerheads]] over how best to tackle the fiscal cliff.}}
+#: {{ux|en|The city was [[at the mercy of|'''at''' the mercy of]] the occupying forces.}}
 # {{non-gloss definition|Indicates a position on a scale or in a series.}}
-#: {{ux|en|Sell '''at''' 90.&emsp; {{nowrap|Tiger finished the round '''at''' tenth, seven strokes behind the leaders.}}&emsp; {{nowrap|I'm offering it&mdash;just to select customers&mdash;'''at''' cost.}}}}
+#: {{ux|en|Sell '''at''' 90.}}
+#: {{ux|en|Tiger finished the round '''at''' tenth, seven strokes behind the leaders.}}
+#: {{ux|en|I'm offering it—just to select customers—'''at''' cost.}}
 # Because of.
 #: {{ux|en|to laugh '''at''' a joke}}
 #: {{ux|en|mad '''at''' their comments}}
@@ -61,7 +66,8 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 #* {{quote-book|en|year=1995|author=Richard Klein|title=Cigarettes are Sublime|isbn=0822316412|page=41|passage=[...] to be sold '''at''' auction for sixty gold francs.}}
 #* {{quote-book|en|year=2012|author=Sami Moubayed|title=Syria and the USA: Washington's Relations with Damascus|isbn=0857730673|passage=A few days later, on 1 October, King Hussein opened the Jordanian Parliament by speaking '''at''' length about the crisis in Syria,}}
 # Holding a given [[speed]] or [[rate#English|rate]].
-#: {{ux|en|It is growing '''at''' the rate of 3% a year.&emsp; {{nowrap|Cruising along '''at''' fifty miles per hour.}}}}
+#: {{ux|en|It is growing '''at''' the rate of 3% a year.}}
+#: {{ux|en|Cruising along '''at''' fifty miles per hour.}}
 # {{lb|en|used for skills (including in activities) or areas of knowledge}} On the [[subject]] of; [[regarding]].
 #: {{ux|en|The twins were both bad '''at''' chemistry.}}
 #: {{ux|en|He slipped '''at''' marksmanship over his extended vacation.}}
