--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -394,7 +394,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 ====Noun====
 {{en-noun}}
 
-# The [[at sign]] ([[@]]).
+# {{senseid|en|sign}} The [[at sign]] ([[@]]).
 
 =====Translations=====
 {{trans-see|at sign}}
