--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -630,7 +630,7 @@ From {{der|fur|la|actus}}; cf. {{cog|it|atto}}.
 ==German==
 
 ===Etymology 1===
-{{bor|de|en|at}}
+Borrowed from {{bor|de|en|at|id=sign}}.
 
 ====Pronunciation====
 * {{IPA|de|/ɛt/}}
