--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -18,31 +18,30 @@ Sense of "group of military officers that assists a commander" and similar meani
 {{en-noun|~|s|staves|staff}}
 [[Image:Music-staff.png|thumb|right|A musical staff]]
 
-# {{lb|en|plural [[staffs]] or [[staves]]}} A long, straight, thick wooden [[rod]] or [[stick]], especially one used to assist in walking.
-#* {{RQ:KJV|Exodus|12|11|passage=And thus shall ye eat [the lamb]; with your loins girded, your shoes on your feet, and your '''staff''' in your hand; and ye shall eat it in haste: it is the Lord's passover.}}
+# {{lb|en|plural {{m|en|staffs}} or {{m|en|staves}}}} A long, straight, thick wooden [[rod]] or [[stick]], especially one used to assist in walking.
+#* {{RQ:KJV|Exodus|12|11|page=147|column=2|passage=And thus ſhall ye eate it [the lamb]: with your loines girded, your ſhooes on your feet, and your '''ſtaffe''' in your hand: and ye ſhall eate it in haſte: it is the {{smc|Lords}} Paſſeouer.}}
 #* {{quote-book|en|year=1927|author=[http://openlibrary.org/authors/OL2416183A F. E. Penny]
 |chapter=4|title=[http://openlibrary.org/works/OL16814587W Pulling the Strings]
 |passage=The case was that of a murder. It had an element of mystery about it, however, which was puzzling the authorities. A turban and loincloth soaked in blood had been found; also a '''staff'''.}}
-# {{lb|en|music|plural [[staves]]}} A [[series]] of [[horizontal]] [[line]]s on which [[music]]al [[note]]s are written; a [[stave]].
-# {{lb|en|plural staff or staffs}} The [[employee]]s of a [[business]].
+# {{lb|en|music|plural {{m|en|staves}}}} A [[series]] of [[horizontal]] [[line]]s on which [[music]]al [[note]]s are written; a [[stave]].
+# {{lb|en|plural {{m|en|staff}} or {{m|en|staffs}}}} The [[employee]]s of a [[business]].
+#: {{ux|en|The company employed 10 new [[member of staff|members of '''staff''']] this month.}}
+#: {{ux|en|The company has taken on 1600 more highly-paid '''staff'''.}}
 #* {{quote-journal|en|date=December 16, 2011|author=Denis Campbell|work=Guardian
 |title=[http://www.guardian.co.uk/society/2011/dec/16/hospital-staff-dementia-patients Hospital staff 'lack skills to cope with dementia patients']
 |passage=Most '''staff''' do not have the skills to cope with such challenging patients, who too often receive "impersonal" care and suffer from boredom, the first National Audit of Dementia found. It says hospitals should introduce "dementia champions".}}
-#: {{ux|en|The company employed 10 new [[members of staff]] this month.}}
-#: {{ux|en|The company has taken on 1600 more highly-paid '''staff'''.}}
 # {{lb|en|uncountable}} A mixture of [[plaster]] and [[fibre]] used as a temporary exterior wall covering.<sup>[[w:Staff (building material)|W]]</sup>
 # A pole, stick, or wand borne as an ensign of authority; a badge of office.
 #: {{ux|en|a constable's '''staff'''}}
-#*{{RQ:Shakespeare Henry 6-2|I|ii|passage=Methought this '''staff''', mine office badge in court, / Was broke in twain.}}
-#* '''1630''', {{w|John Hayward (historian)|John Hayward}}, ''The Life and Raigne of King Edward VI''
+#* {{RQ:Shakespeare Henry 6-2|I|ii|122|2|passage=Me thought this '''ſtaffe''' mine Office-badge in Court / Was broke in twaine:}}
+#* {{RQ:Hayward Edward}}
 #*: All his officers brake their '''staves'''; but at their return new '''staves''' were delivered unto them.
 # A pole upon which a [[flag]] is supported and displayed.
 # {{lb|en|archaic}} The [[rung]] of a [[ladder]].
 #* '''1739''', {{w|John Campbell (author)|John Campbell}}, ''The Travels and Adventures of Edward Bevan, Esq.''
 #*: I ascend at one [ladder] of six hundred and thirty-nine '''staves'''.
 # A series of verses so disposed that, when it is concluded, the same order begins again; a stanza; a [[stave]].
-#* {{RQ:Dryden Aeneis}}, Dedication
-#*: Mr. Cowley had found out that no kind of '''staff''' is proper for an heroic poem, as being all too lyrical.
+#* {{RQ:Dryden Virgil|To the Most Honourable ''John'', Lord Marquess of ''Normanby'', Earl of ''Mulgrave'', &c. and Knight of the ''Most Noble Order of the Garter''|page=192|passage=Mr. ''Cowley'' had found out, that no kind of '''Staff''' is proper for an Heroick Poem; as being all too lirical:}}
 # {{lb|en|engineering}} An [[arbor]], as of a wheel or a pinion of a watch.
 # {{lb|en|surgery}} The grooved director for the gorget, or knife, used in cutting for stone in the bladder.
 # {{lb|en|military}} An establishment of officers in various departments attached to an army, to a section of an army, or to the commander of an army. The general's staff consists of those officers about his person who are employed in carrying his commands into execution.
@@ -70,6 +69,13 @@ Sense of "group of military officers that assists a commander" and similar meani
 |vine staff
 |whipstaff
 }}
+
+====Descendants====
+* {{desc|fr|staff|bor=1}}
+* {{desc|it|staff|bor=1}}
+* {{desc|ja|スタッフ|tr=sutaffu|bor=1}}
+* {{desc|ko|스태프|bor=1}}
+* {{desc|es|staff|bor=1}}
 
 =====Translations=====
 {{trans-top|long, straight, thick rod or stick}}
@@ -286,7 +292,7 @@ Sense of "group of military officers that assists a commander" and similar meani
 {{fr-noun|m}}
 
 # [[#English|staff]], mixture of plaster and fibre.
-#: ''Le '''staff''' apparaît grâce au Français Mézier qui vers 1850 a l'idée de réaliser une première corniche préfabriquée armée d'une toile de jute. Dès lors l'emploi du '''staff''' se développe rapidement jusqu'à atteindre son apogée à la belle époque.'' (Wikipédia)
+#: {{ux|fr|Le '''staff''' apparaît grâce au Français Mézier qui vers 1850 a l'idée de réaliser une première corniche préfabriquée armée d'une toile de jute. Dès lors l'emploi du '''staff''' se développe rapidement jusqu'à atteindre son apogée à la belle époque.|ref=&#32;(Wikipédia)}}
 
 =====Derived terms=====
 * {{l|fr|staffer}}
@@ -332,6 +338,7 @@ Borrowed from {{bor|it|en|staff}}.
 ----
 
 ==Spanish==
+
 ===Etymology===
 From {{bor|es|en|staff}}.
 
