--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -70,7 +70,7 @@ Sense of "group of military officers that assists a commander" and similar meani
 |whipstaff
 }}
 
-====Descendants====
+=====Descendants=====
 * {{desc|fr|staff|bor=1}}
 * {{desc|it|staff|bor=1}}
 * {{desc|ja|スタッフ|tr=sutaffu|bor=1}}
