--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-{{root|en|ine-pro|*mey-}}
+{{root|en|ine-pro|*mey- (small)}}
 From {{der|en|la|minimum}}, neuter form of {{m|la|minimus||least, smallest}}.
 
 ===Pronunciation===
