t+bg:[[квадрант]] t+bg:[[квадранд]] ([[WT:EDIT|Assisted]]) <quadrant#62501840>

--- a/en/q/quadrant.4317.wikitext
+++ b/en/q/quadrant.4317.wikitext
@@ -23,6 +23,7 @@ Borrowed from {{bor|en|la|quadrantem}}, accusative singular of {{m|la|quadrāns|
 
 ====Translations====
 {{trans-top|section}}
+* Bulgarian: {{t|bg|квадрант|m}}
 * Catalan: {{t|ca|quadrant|m}}
 * Czech: {{t+|cs|kvadrant|m}}
 * Dutch: {{t+|nl|kwadrant|n}}
@@ -39,6 +40,7 @@ Borrowed from {{bor|en|la|quadrantem}}, accusative singular of {{m|la|quadrāns|
 {{trans-bottom}}
 
 {{trans-top|region of the Cartesian plane}}
+* Bulgarian: {{t|bg|квадрант|m}}
 * Catalan: {{t|ca|quadrant|m}}
 * Chinese:
 *: Mandarin: {{t+|cmn|象限|tr=Xiàngxiàn|sc=Hani}}
@@ -59,6 +61,7 @@ Borrowed from {{bor|en|la|quadrantem}}, accusative singular of {{m|la|quadrāns|
 {{trans-bottom}}
 
 {{trans-top|fourth of a circle}}
+* Bulgarian: {{t|bg|квадрант|m}}
 * Catalan: {{t|ca|quadrant|m}}
 * Czech: {{t+|cs|kvadrant|m}}
 * Dutch: {{t+|nl|kwadrant|n}}
@@ -74,6 +77,7 @@ Borrowed from {{bor|en|la|quadrantem}}, accusative singular of {{m|la|quadrāns|
 {{trans-bottom}}
 
 {{trans-top|measuring device}}
+* Bulgarian: {{t|bg|квадранд|m}}
 * Catalan: {{t|ca|quadrant|m}}
 * Czech: {{t+|cs|kvadrant|m}}
 * Dutch: {{t+|nl|kwadrant|n}}
