--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -91,7 +91,7 @@ From {{der|en|la|quadrilaterus}}, {{m|en|quadri-||four}} + {{cog|la|laterālis||
 {{trans-top|having four sides}}
 * Arabic: {{t|ar|رُبَاعِيّ الْجَوَانِب}}
 * Armenian: {{t+|hy|քառակողմ}}
-* Bulgarian: {{t|bg|четиристъранен}}
+* Bulgarian: {{t|bg|четиристранен}}
 * Catalan: {{t+|ca|quadrilàter}}
 * Danish: {{t|da|firkantet}}
 * Dutch: {{t|nl|vierhoekig}}, {{t|nl|quadrilateraal}}
