--- a/en/f/fazes.746871.wikitext
+++ b/en/f/fazes.746871.wikitext
@@ -12,9 +12,10 @@
 ==Portuguese==
 
 ===Pronunciation===
-* {{a|PT}} {{IPA|pt|/ˈfa.zɨʃ/}}
+{{pt-IPA}}
+* {{hyph|pt|fa|zes}}
 
 ===Verb===
 {{head|pt|verb form}}
 
-# {{inflection of|pt|fazer||2|s|pres|indc}}
+# {{pt-verb-form-of|fazer}}
