/* Descendants */ edited using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]] <at#62510663>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -959,7 +959,7 @@ From {{inh|non|gem-pro|*at|t=at, to}}. Cognate with {{cog|ang|æt}}, {{cog|ofs|e
 * {{desc|da|ad}}
 * {{desc|fo|at}}
 * {{desc|is|að}}
-* {{desc|no|åt}}
+* {{desc|nb|åt}}
 * {{desc|sv|åt}}
 {{bottom}}
 
