/* Descendants */ edited using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]] <at#62510696>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -956,7 +956,9 @@ From {{inh|non|gem-pro|*at|t=at, to}}. Cognate with {{cog|ang|æt}}, {{cog|ofs|e
 
 =====Descendants=====
 {{top2}}
-* {{desc|da|ad}}
+* {{desc|gmq-oda|at}}
+** {{desc|da|ad}}
+*** {{desc|nb|ad}}
 * {{desc|fo|at}}
 * {{desc|is|að}}
 * {{desc|nb|åt}}
