/* Phrase */ <what's good#62512693>

--- a/en/w/what's good.801534.wikitext
+++ b/en/w/what's good.801534.wikitext
@@ -6,9 +6,9 @@
 ===Phrase===
 {{head|en|phrase}}
 
-# {{lb|en|colloquial}} [[what]] [[is]] [[good]], especially in reference to food.
+# {{lb|en|colloquial}} [[what|What]] [[is]] [[good]], especially in reference to food.
 #: {{ux|en|'''What's good''' here? I'm way too indecisive to choose from a menu.}}
-# {{lb|en|slang}} [[what's up]]
+# {{lb|en|slang}} [[what's up|What's up]].
 
 ====Translations====
 {{trans-top|''(colloquial)'' what is good, especially in reference to food}}
