t+cmn:[[[[這裡]][[有]][[什麼]][[好吃]][[的]]]] t-balance t+cmn:[[[[这里]][[有]][[什么]][[好吃]][[的]]]] t+fr:[[{{t-needed}}]] t+da:[[{{t-needed}}]] t+nl:[[{{t-needed}}]] ([[WT:EDIT|Assisted]]) <what's good#62512696>

--- a/en/w/what's good.801534.wikitext
+++ b/en/w/what's good.801534.wikitext
@@ -12,10 +12,15 @@
 
 ====Translations====
 {{trans-top|''(colloquial)'' what is good, especially in reference to food}}
+* Chinese:
+*: Mandarin: {{t|cmn|[[這裡]][[有]][[什麼]][[好吃]][[的]]？}}, {{t|cmn|[[这里]][[有]][[什么]][[好吃]][[的]]？|tr=zhèlǐ yǒu shénme hàochī de?}}
+* Danish: {{t-needed|da}}
+* Dutch: {{t-needed|nl}}
+{{trans-mid}}
 * Finnish: {{t|fi|[[mikä]] [[on]] [[hyvää]]}}
+* French: {{t-needed|fr}}
 * Kurdish:
 *: Central Kurdish: {{t|ckb|چی باشە؟}}
-{{trans-mid}}
 {{trans-bottom}}
 
 {{trans-see|what's up}}
