--- a/en/p/prisoner of war.4326.wikitext
+++ b/en/p/prisoner of war.4326.wikitext
@@ -58,6 +58,7 @@
 * Slovak: {{t|sk|zajatec|m}}
 * Spanish: {{t|es|prisionero de guerra|m}}, {{t|es|prisionera de guerra|f}}
 * Swedish: {{t+|sv|krigsfånge}}
+* Swahili: {{t|sw|mfungwa wa vita}}
 * Tatar: {{t+|tt|әсир}}
 * Telugu: {{t|te|యుద్ధ ఖైదీ}}
 * Thai: {{t|th|เชลยศึก}}
