--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -354,7 +354,7 @@ From {{inh|fr|fro|-}}, borrowed from {{bor|fr|la|simplex}}.
 
 # [[single]] (multiplier)
 #: {{usex|fr|comptabilité en partie '''simple''' et double|single-entry and double-entry bookkeping}}
-#: {{usex|fr|passer du '''simple''' au double, du '''simple''' au triple...|to double, triple...}}
+#: {{a single crotch-an eighth note}}
 # {{l|en|simple}}
 #: {{ux|fr|Un homme simple|A simple man}}
 # {{l|en|one-way}}
