t+lzz:[[Lazuri]] t+lzz:[[Lazuri nena]] ([[WT:EDIT|Assisted]]) <Laz#62515390>

--- a/en/l/Laz.774545.wikitext
+++ b/en/l/Laz.774545.wikitext
@@ -19,7 +19,7 @@
 {{trans-mid}}
 * German: {{t|de|Lasische Sprache|f}}
 *: Northern Kurdish: {{t-needed|kmr}}
-* Laz: {{t|lzz|ლაზური ნენა}}, {{t|lzz|ლაზური}}
+* Laz: {{t|lzz|ლაზური ნენა}}, {{t|lzz|ლაზური}}, {{t|lzz|Lazuri}}, {{t|lzz|Lazuri nena}}
 * Mingrelian: {{t|xmf|ლაზური}}, {{t|xmf|ლაზური ნინა}}
 * Russian: {{t+|ru|ла́зский|m}}
 * Svan: {{t-needed|sva}}
