--- a/en/g/greenlight.746549.wikitext
+++ b/en/g/greenlight.746549.wikitext
@@ -9,7 +9,7 @@
 From {{m|en|green light}}.
 
 ===Verb===
-{{en-verb|greenlights|greenlighting|greenlit|past2=greenlighted}}
+{{en-verb|greenlights|greenlighting|greenlighted|past2=greenlit}}
 
 # {{lb|en|transitive}} To [[approve]]; to [[permit]] to [[proceed]].
 #* {{quote-journal|en|date=2020 December 2|author=Paul Stephen|title=Network News: Sunak focuses on jobs, infrastructure and 'levelling up'|journal=Rail|page=7|text=Labour's Shadow Chancellor Anneliese Dodds hit back at Sunak and said that his failure to '''greenlight''' major projects such as Northern Powerhouse Rail showed that government claims of levelling up the country were "not supported by the evidence".}}
