--- a/en/m/metallurgist.720328.wikitext
+++ b/en/m/metallurgist.720328.wikitext
@@ -20,8 +20,9 @@
 * French: {{t+|fr|métallurgiste|m|f}}, {{t+|fr|métallurge}}
 * German: {{t|de|Metallurg|m}}, {{t|de|Metallurge|m}}, {{t|de|Metallurgin|f}}
 * Irish: {{t|ga|miotalóir|m}}
-* Manx: {{t|gv|meaineyr|m}}
+* Italian: {{t+|it|metallurgico|m}}
 {{trans-mid}}
+* Manx: {{t|gv|meaineyr|m}}
 * Polish: {{t+|pl|metalurg|m}}
 * Portuguese: {{t|pt|metalurgista|m|f}}
 * Romanian: {{t+|ro|metalurgist|m}}, {{t+|ro|metalurgistă|f}}, {{t+|ro|metalurg|m}} {{qualifier|dated}}
