--- a/en/m/metallurgist.720328.wikitext
+++ b/en/m/metallurgist.720328.wikitext
@@ -7,6 +7,7 @@
 {{en-noun}}
 
 # {{lb|en|dated}} A person who works in [[metal]].
+#: {{syn|en|metalworker}}
 # A person skilled in [[metallurgy]].
 
 ====Translations====
