t+it:[[dottore]] ([[WT:EDIT|Assisted]]) <sir#62529921>

--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -182,6 +182,7 @@ From {{inh|en|enm|sir}}, unstressed form of {{m|enm|sire}}, borrowed from {{der|
 {{trans-top|to address (someone) using "sir"}}
 {{trans-mid}}
 * Hungarian: {{t|hu|uraz}}
+* Italian: {{t+|it|dottore|m}}
 {{trans-bottom}}
 
 ===See also===
