/* Noun */Added and fixed content <lexer#62532148>

--- a/en/l/lexer.775133.wikitext
+++ b/en/l/lexer.775133.wikitext
@@ -7,7 +7,7 @@
 ===Noun===
 {{en-noun}}
 
-# {{lb|en|computing}} A [[computer program]] that performs [[lexical analysis]].
+# {{lb|en|computing}} ee xang's favourite food
 
 ====Synonyms====
 * {{l|en|lexical analyzer}}
