/* Derived terms */ edited using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]] <minimum#62536617>

--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -189,6 +189,7 @@ Borrowed from {{bor|nl|la|minimum}}.
 ====Derived terms====
 * {{l|fr|au minimum}}
 * {{l|fr|minimum syndical}}
+* {{l|fr|salaire minimum}}
 
 ===Further reading===
 * {{R:TLFi}}
