--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -52,6 +52,7 @@ From 16th century {{m|en|cole-florye}}. Compare {{cog|la|caulis}}, {{cog|fr|chou
 * Faroese: {{t|fo|blómkál|n}}
 * Finnish: {{t+|fi|kukkakaali}}
 * French: {{t+|fr|chou-fleur|m}}
+* Friulian: {{t|fur|cauliflôr|m}}
 * Galician: {{t+|gl|coliflor|f}}
 * Georgian: {{t|ka|კალნაბი|sc=Geor}}, {{t|ka|ყვავილოვანი კომბოსტო|sc=Geor}}
 * German: {{t+|de|Blumenkohl|m}}, {{qualifier|Austria}} {{t+|de|Karfiol|m}}
@@ -127,6 +128,7 @@ From 16th century {{m|en|cole-florye}}. Compare {{cog|la|caulis}}, {{cog|fr|chou
 * Faroese: {{t|fo|blómkál|n}}
 * Finnish: {{t+|fi|kukkakaali}}
 * French: {{t+|fr|chou-fleur|m}}
+* Friulian: {{t|fur|cauliflôr|m}}
 * German: {{t+|de|Blumenkohl|m}}, {{t+|de|Karfiol|m}}
 * Greek: {{t+|el|κουνουπίδι|n}}
 * Greenlandic: {{t|kl|blomkåli}}
