/* Northern Kurdish */ <sond#62542842>

--- a/en/s/sond.856409.wikitext
+++ b/en/s/sond.856409.wikitext
@@ -9,6 +9,9 @@
 
 ==Northern Kurdish==
 
+===Etymology===
+Compare {{cog|fa|سوگند|tr=sowgand}}. {{cog|ckb|سوێند}}.
+
 ===Pronunciation===
 * {{kmr-IPA}}
 
@@ -16,6 +19,9 @@
 {{kmr-noun|f}}
 
 # [[oath]]
+
+===References===
+* {{R:kmr:Chyet|sond|558}}
 
 ----
 
