--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -81,6 +81,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 |paper mill
 |pecker mill
 |Pen Mill
+|pill mill
 |powder mill
 |pulp mill
 |puppy mill
