/* Derived terms */ <bend#62547617>

--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -290,10 +290,12 @@ From {{der|en|enm|benden}}, from {{der|en|ang|bendan||to bind or bend (a bow), f
 # {{lb|en|music}} A [[glissando]], or [[glide]] between one [[pitch]] and another.
 
 ====Derived terms====
-{{der3|en|title=terms derived from ''bend (noun)''|around the bend
+{{der3|en|title=terms derived from ''bend (noun)''
+|around the bend
 |bend sinister|bendlet|bendsome|bendy|drive somebody round the bend
 |Fort Bend County|Great Bend|in bend|sheet bend
-|South Bend|string bend}}
+|South Bend|string bend|Tailem Bend
+}}
 
 ====Translations====
 {{trans-top|curve}}
