--- a/en/m/marten.8230.wikitext
+++ b/en/m/marten.8230.wikitext
@@ -51,6 +51,7 @@ From {{inh|en|enm|martren}}, {{m|enm|martryn}}, from {{der|en|fro|martrine||mart
 * German: {{t+|de|Marder|m}}
 * Greek: {{t|el|δενδροκούναβο}}
 *: Ancient: {{t|grc|ἴκτις|f}}
+* Hebrew: {{t+|he|דלק}}
 * Hungarian: {{t+|hu|nyuszt}}, {{t+|hu|nyest}}
 * Icelandic: {{t+|is|mörður|m}}
 * Inari Sami: {{t|smn|neeti}}
