--- a/en/i/in one's right mind.775705.wikitext
+++ b/en/i/in one's right mind.775705.wikitext
@@ -33,6 +33,7 @@
 * Finnish: {{t+|fi|järjissään}}
 * Hungarian: {{t+|hu|normális}}, {{t|hu|épeszű}}, {{t+|hu|épelméjű}}, {{t|hu|eszénél van}}
 {{trans-mid}}
+* Polish: {{t|pl|przy zdrowych zmysłach}}
 * Russian: {{t|ru|в здра́вом уме́}} {{qualifier|in healthy/sound mind}}, {{t|ru|в своём уме́}} {{qualifier|in one's (own) mind}}
 * Spanish: {{t|es|en su sano juicio}}, {{t|es|en sus cabales}}
 {{trans-bottom}}
