t+sv:[[tillkännage]] t+sv:[[börsintroducera]] ([[WT:EDIT|Assisted]]) <go public#62567974>

--- a/en/g/go public.742281.wikitext
+++ b/en/g/go public.742281.wikitext
@@ -18,6 +18,7 @@
 {{trans-mid}}
 * Finnish: {{t+|fi|julkistaa}}
 * Portuguese: {{t-needed|pt}}
+* Swedish: {{t+|sv|tillkännage}}
 {{trans-bottom}}
 
 {{trans-top|launch an initial public offering}}
@@ -26,4 +27,5 @@
 {{trans-mid}}
 * Finnish: {{t|fi|[[mennä]] [[pörssiin]]}}
 * Portuguese: {{t-needed|pt}}
+* Swedish: {{t|sv|börsintroducera}}
 {{trans-bottom}}
