/* Swedish */ edited using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]] <-um#62568632>

--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -294,7 +294,7 @@ Probably of jocular formation, based partly on Latin {{m|la|-um}} and partly an 
 ===Suffix===
 {{head|sv|suffix|g=n}}
 
-# Denotes [[singular]] [[grammatical]] [[number]] of words of Latin origins.
+# {{non-gloss definition|ending used for some words of Latin origin}}
 
 ====Usage notes====
 * The plural is usually either ''-um'' or rarely, {{m|sv|-a}}, e.g. {{m|sv|centrum}} or {{m|sv|centra}}. In some words it may also be {{m|sv|-er}}, i.e. {{m|sv|centrer}}, cf. {{m|sv|-ium}} which regularly has a plural on {{m|sv|-ier}}, although sometimes also {{m|sv|-ium}} in colloquial language. The Latin plural ending {{m|sv|-a}} is nowadays {{glossary|proscribed}}.
