--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -138,7 +138,7 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 * Greek: {{t+|el|θεωρία|f}}
 * Haitian Creole: {{t|ht|teori}}
 * Hebrew: {{t+|he|תּוֹרָה|f|tr=torá}}, {{t|he|תֵּאוֹרְיָה|f|tr=teórya}}
-* Hindi: {{t+|hi|सिद्धांत|m}}, {{t|hi|नज़रिया|m}}, {{t+|hi|तत्त|m}}
+* Hindi: {{t+|hi|सिद्धांत|m}}, {{t|hi|नज़रिया|m}}, {{t+|hi|तथ्य|m}}
 * Hungarian: {{t+|hu|elmélet}}
 * Icelandic: {{t|is|kenning|f}}
 * Ido: {{t+|io|teorio}}
