--- a/en/b/blew.6804.wikitext
+++ b/en/b/blew.6804.wikitext
@@ -56,7 +56,7 @@
 ==Welsh==
 
 ===Etymology===
-From {{inh|cy|wlm|blew}}; cognate with {{cog|br|blew}} and {{cog|kw|bleaw}}.
+From {{inh|cy|wlm|blew}}; cognate with {{cog|br|-}} and {{cog|kw|blew}}.
 
 ===Pronunciation===
 * {{a|North Wales}} {{IPA|cy|/ˈbleːu̯/}}
