--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -260,8 +260,15 @@ Occasionally, in very formal or official registers, ''dame'' can be used as a ti
 
 ====Descendants====
 * {{desc|ca|dama|bor=1}}
+* {{desc|nl|dame|bor=1}}
 * {{desc|en|dame|bor=1}}
+* {{desc|fur|dame|bor=1}}
+* {{desc|gl|dama|bor=1}}
+* {{desc|de|Dame|bor=1}}
 * {{desc|pl|dama|bor=1}}
+* {{desc|pt|dama|bor=1}}
+* {{desc|es|dama|bor=1}}
+* {{desc|ro|damă|bor=1}}
 
 ===See also===
 {{table:chess pieces/fr}}
