--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -425,11 +425,11 @@ From {{inh|fro|LL.|domna}}, shortened variant of {{inh|fro|la|domina}}.
 * {{desc|roa-fcm|daime}}
 * {{desc|it|dama|bor=1}}
 * {{desc|roa-lor|daime}}
-* {{desc|dum|dame|bor=1}}
-** {{desc|nl|dame}}
 * {{desc|enm|dame|bor=1}}, {{l|enm|dam}}
 ** {{desc|en|dame}}
 * {{desc|frm|dame}}
+** {{desc|dum|dame|bor=1}}
+*** {{desc|nl|dame}}
 ** {{desctree|fr|dame}}
 * {{desc|nrf|dame}}
 * {{desc|nb|dame|bor=1}}
