--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -265,8 +265,8 @@ Occasionally, in very formal or official registers, ''dame'' can be used as a ti
 * {{desc|de|Dame|bor=1}}
 * {{desc|pl|dama|bor=1}}
 * {{desc|pt|dama|bor=1}}
-* {{desc|es|dama|bor=1}}
 * {{desc|ro|damă|bor=1}}
+* {{desc|es|dama|bor=1}}
 
 ===See also===
 {{table:chess pieces/fr}}
@@ -325,7 +325,7 @@ From {{bor|enm|fro|dame}}, from {{der|enm|la|domina}}.
 
 =====Descendants=====
 * {{desc|en|dame}}; {{l|en|dam|id=mother}}
-* {{desc|sco|dame}}; {{l|sco|dam}}
+* {{desc|sco|dame}}, {{l|sco|deem}}; {{l|sco|dam}}
 
 =====References=====
 * {{R:MED Online|dāme|n|MED10521}}
@@ -425,12 +425,11 @@ From {{inh|fro|LL.|domna}}, shortened variant of {{inh|fro|la|domina}}.
 * {{desc|roa-fcm|daime}}
 * {{desc|it|dama|bor=1}}
 * {{desc|roa-lor|daime}}
-* {{desc|enm|dame|bor=1}}, {{l|enm|dam}}
-** {{desc|en|dame}}
+* {{desctree|enm|dame|bor=1}}
 * {{desc|frm|dame}}
+** {{desctree|fr|dame}}
 ** {{desc|dum|dame|bor=1}}
 *** {{desc|nl|dame}}
-** {{desctree|fr|dame}}
 * {{desc|nrf|dame}}
 * {{desc|nb|dame|bor=1}}
 * {{desc|nn|dame|bor=1}}
