t+ro:[[da]] ([[WT:EDIT|Assisted]]) <yeah#62580665>

--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -48,6 +48,7 @@ Colloquial form of {{m|en|yea}} or {{m|en|yes}}. Compare {{m|en|nah}}
 * Persian: {{t+|fa|بله|tr=bale}}, {{t+|fa|آره|tr=âre|sc=fa-Arab}}
 * Polish: {{t+|pl|tak}}, {{t+|pl|no}}<!-- Yes, this is in the right place, "no" means "yeah" or "yep" in Czech, Slovak, Polish -->, {{t+|pl|ta|m}} {{qualifier|colloquial}}, {{t+|pl|aha|m}}, {{t+|pl|acha}}
 * Portuguese: {{t+|pt|sim}}, {{t+|pt|é}}
+* Romanian: {{t+|ro|da}}
 * Russian: {{t+|ru|ага́}}, {{t+|ru|ага́|tr=ahá}}, {{t+|ru|угу́}}, {{t+|ru|угу́|tr=uhú}}, {{t+|ru|так}}, {{t+|ru|ну}}
 * Serbo-Croatian: {{t+|sh|da}} {{t+|sh|da}}
 *: Cyrillic: {{t|sh|да̑|sc=Cyrl}}
