--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -49,7 +49,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 #: {{ux|en|He tried to sprint, but his ligaments '''blew''' and he was barely able to walk to the finish line.}}
 # {{lb|en|intransitive}} (used to express displeasure or frustration) [[damn|Damn]].
 #* {{RQ:Grahame Wind in the Willows|The River Bank|pages=1–2|pageref=2|passage=[H]e suddenly flung down his brush on the floor, said 'Bother!' and 'Oh '''blow'''!' and also 'Hang spring-cleaning!' and bolted out of the house without even waiting to put on his coat.}}
-# {{lb|en|intransitive|slang}} To be very [[undesirable]].
+# {{lb|en|intransitive|slang|sometimes|_|considered|_|vulgar}} To be very [[undesirable]].
 #: {{synonyms|en|suck}}
 #: {{ux|en|This '''blows'''!}}
 # {{lb|en|transitive|slang}} To recklessly [[squander]].
