--- a/en/b/bailer.801537.wikitext
+++ b/en/b/bailer.801537.wikitext
@@ -13,6 +13,7 @@
 #* {{quote-text|en|year=1941|author={{w|Emily Carr}}|title={{w|Klee Wyck}}|chapter=10|url=http://www.gutenberg.net.au/ebooks01/0100131h.html|passage=Two bits was the top price that old Jenny knew. She asked two bits for everything she had to sell, were it canoe-'''bailer''', eagle's wing, cedar-bark basket or woven mat.}}
 # {{lb|en|legal}} {{alternative form of|en|bailor}}
 # {{lb|en|cricket|dated}} A [[delivery]] that heads towards the [[bail]]s after [[pitch]]ing.
+# {{lb|en|cricket|dated}} A delivery in which the ball hits one or both bails but does not dislodge them.
 
 ====Translations====
 {{trans-top|a utensil}}
