--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -57,8 +57,7 @@ From {{inh|en|enm|agayn}}, {{m|enm|again}},{{m|enm|ayain}}, {{m|enm|ayen}}, {{m|
 |title=[http://openlibrary.org/works/OL2004261W The China Governess]
 |passage=Meanwhile Nanny Broome was recovering from her initial panic and seemed anxious to make up for any kudos she might have lost, by exerting her personality to the utmost. She took the policeman's helmet and placed it on a chair, and unfolded his tunic to shake it and fold it up '''again''' for him.}}
 # {{lb|en|obsolete}} [[in return|In return]], as a reciprocal action; [[back]]. {{defdate|13<sup>th</sup>–19<sup>th</sup>c.}}
-#* {{RQ:Mlry MrtDrthr|5.1|2|III|I}}:
-#*: but Merlyn warned the kynge couertly that gweneuer was not holsome for hym to take to wyf / for he warned hym that launcelot shold loue her and she hym '''ageyne'''
+#* {{RQ:Mlry MrtDrthr|5.1|2|III|I|passage=but Merlyn warned the kynge couertly that gweneuer was not holsome for hym to take to wyf / for he warned hym that launcelot shold loue her and she hym '''ageyne'''}}
 #* {{RQ:Florio Montaigne Essayes|chapter=31|book=II|passage=So women are never angrie, but to the end a man should '''againe''' be angrie with them, therein imitating the lawes of Love.}}
 #* {{RQ:Burton Melancholy|part=I|section=2|member=4|subsection=vii|passage=Thus men are plagued with women, they '''again''' with men, when they are of diverse humours and conditions{{nb...}}.}}
 #* '''1852–3''', {{w|Charles Dickens}}, ''{{w|Bleak House}}''
