--- a/en/a/at the end of one's tether.776810.wikitext
+++ b/en/a/at the end of one's tether.776810.wikitext
@@ -18,7 +18,7 @@
 * Finnish: {{t|fi|[[olla]] [[katkeamispiste|katkeamispisteessä]]}}
 * French: {{t+|fr|au bout du rouleau}}, {{t+|fr|exaspéré}}
 {{trans-mid}}
-* German: {{t|de|mit seiner Geduld am Ende}}, {{t|de|jemandem reißt der Geduldsfaden}}
+* German:  {{t|de|jemandem reißt (gleich) der Geduldsfaden}}, {{t|de|mit seiner Geduld am Ende}}
 * Italian: {{t|it|al limite della sopportazione}}
 * Korean: {{t|ko|진퇴양난에 빠진}}
 * Polish: {{t|pl|u kresu wytrzymałości}}
