--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -79,6 +79,7 @@ Cognate with {{cog|nl|kreuk||a bend, fold, wrinkle}}, {{cog|gml|kroke}}, {{m|gml
 {{trans-top|a shepherd's crook}}
 * Bulgarian: {{t+|bg|гега|f}}
 * Finnish: {{t|fi|käyräsauva}}
+* Dutch: {{t+|nl|herdersstaf|m}}
 * French: {{t+|fr|houlette|f}}
 * Galician: {{t+|gl|caxato|m}}
 * Georgian: {{t|ka|კავი}}, {{t|ka|კაუჭი}}
