--- a/en/b/bottomonia.856289.wikitext
+++ b/en/b/bottomonia.856289.wikitext
@@ -5,4 +5,4 @@
 
 # {{plural of|en|bottomonium}}
 
-[[Category:English plurals ending in "-a"]]
+[[Category:English irregular plurals ending in "-a"]]
