added [[Category:en:Perching birds]] using [[Help:Gadget-HotCat|HotCat]] <whistler#62636960>

--- a/en/w/whistler.7356.wikitext
+++ b/en/w/whistler.7356.wikitext
@@ -55,3 +55,4 @@ From {{inh|en|enm|whisteler}}, {{m|enm|whistlar}}, {{m|enm|whystelare}}, from {{
 {{topics|en|Atmospheric phenomena|Ducks|Squirrels}}
 
 [[Category:en:Rodents]]
+[[Category:en:Perching birds]]
