--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -962,7 +962,8 @@ From {{inh|non|gem-pro|*at|t=at, to}}. Cognate with {{cog|ang|æt}}, {{cog|ofs|e
 * {{desc|fo|at}}
 * {{desc|is|að}}
 * {{desc|nb|åt}}
-* {{desc|sv|åt}}
+* {{desc|gmq-osw|at}}, {{l|gmq-osw|at|āt}}
+** {{desc|sv|åt}}
 {{bottom}}
 
 ===References===
