--- a/en/h/Hildegard.855804.wikitext
+++ b/en/h/Hildegard.855804.wikitext
@@ -21,7 +21,7 @@ Borrowed from {{bor|en|de|Hildegard}} in the 19th century; ultimately from {{der
 ==German==
 
 ===Etymology===
-Ultimately from {{der|de|gmw-pro|*Hildigardu}}, from {{compound|gem-pro|*hildiz|t1=battle|*gardaz|t2=enclosure}}, with the approximate meaning “battle protector”. The modern form is of West Germanic but not High German origin, as it does not show the characteristic High German shift of ''*d'' to ''t''. Compare {{cog|goh|Hildigard}}, {{m|goh|Hiltigart}}.
+Ultimately from {{der|de|gmw-pro|*Hildigardu}}, from {{der|de|gem-pro|-}} {{compound|gem-pro|*hildiz|t1=battle|*gardaz|t2=enclosure|nocat=1}}, with the approximate meaning “battle protector”. The modern form is of West Germanic but not High German origin, as it does not show the characteristic High German shift of ''*d'' to ''t''. Compare {{cog|goh|Hildigard}}, {{m|goh|Hiltigart}}.
 
 ===Pronunciation===
 * {{audio|de|De-Hildegard.ogg|Audio}}
