--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -64,7 +64,7 @@ Compare {{cog|cy|benn||cart}}, {{cog|la|offendīx||knot, band}}, {{cog|lt|beñdr
 # {{lb|en|UK|dialect}} To [[complain]]; to [[whine]] about something.
 #* {{quote-book|en|year=1980|author=Iris Murdoch|title=Nuns And Soldiers|passage="But it's not much good piling up the pix if I can't sell them."<br>"Oh do stop '''binding'''. Think of something. How will we eat, where will we sleep?"}}
 # {{lb|en|intransitive||LGBT}} To wear a [[binder]] so as to flatten one's chest to give the appearance of a flat chest, usually done by trans men.
-#: {{ux|en|I haven't ''binded'' since I got my top surgery}}
+#: {{ux|en|I haven't '''binded''' since I got my top surgery}}
 
 ====Derived terms====
 {{col3|en
