--- a/en/n/nove.26046.wikitext
+++ b/en/n/nove.26046.wikitext
@@ -129,6 +129,7 @@ From {{inh|it|la|novem}}, ultimately from {{inh|it|ine-pro|*h₁néwn̥}}.
 ==Latin==
 
 ===Etymology===
+{{root|la|ine-pro|*new-|id=new}}
 From {{affix|la|novus|t1=new|-ē|pos2=adverbial suffix}}.
 
 ===Adverb===
