--- a/en/a/abandono.4114.wikitext
+++ b/en/a/abandono.4114.wikitext
@@ -129,26 +129,29 @@ From {{bor|eo|fro|abandoner}}.
 ----
 
 ==Spanish==
-{{root|es|ine-pro|*bʰeh₂-|id=speak}}
-
-===Etymology===
-{{back-form|es|abandonar}}.
 
 ===Pronunciation===
 {{es-IPA}}
 
-===Noun===
+===Etymology 1===
+{{back-form|es|abandonar}}.
+{{root|es|ine-pro|*bʰeh₂-|id=speak}}
+
+====Noun====
 {{es-noun|m}}
 
 # [[abandonment]]
 #: {{uxi|es|el medio al '''abandono'''|fear of '''abandonment'''}}
 
-====Derived terms====
+=====Derived terms=====
 {{col3|es
 |abandono de proceso
 }}
 
-===Verb===
+===Etymology 2===
+{{nonlemma}}
+
+====Verb====
 {{head|es|verb form}}
 
 # {{es-verb form of|mood=ind|tense=pres|num=s|pers=1|ending=ar|abandonar}}
