--- a/en/a/abandonar.4113.wikitext
+++ b/en/a/abandonar.4113.wikitext
@@ -12,6 +12,9 @@
 
 ==Catalan==
 
+===Etymology===
+From {{bor|ca|fr|abandonner}}, from {{der|ca|fro|abandoner}}, formed from {{m|fro|à|a|t=at, to}} + {{m|fro|bandon|t=jurisdiction, control}}, from {{der|ca|LL.|bannum|t=proclamation}}, {{m|la|bannus}}, {{m|la|bandum}}, from {{der|ca|frk|*ban}}, {{m|gmw-pro|*bann}}, from {{der|ca|gem-pro|*bannaną|t=to proclaim, command}}, from {{der|ca|ine-pro|*bʰeh₂-|t=to speak}}.
+
 ===Pronunciation===
 * {{ca-IPA}}
 * {{homophones|ca|abandonà}}
@@ -20,7 +23,9 @@
 ===Verb===
 {{ca-verb}}
 
-# to [[abandon]]
+# {{lb|ca|transitive}} to [[abandon]]
+# {{lb|ca|intransitive}} {{rfdef|ca}}
+# {{lb|ca|pronominal}} {{rfdef|ca}}
 
 ====Conjugation====
 {{ca-conj-ar|abandon}}
