added [[Category:English verbal nouns]] using [[Help:Gadget-HotCat|HotCat]] <trickling#62665278>

--- a/en/t/trickling.720060.wikitext
+++ b/en/t/trickling.720060.wikitext
@@ -10,3 +10,5 @@
 
 # The act or result of something that trickles.
 #: ''the '''tricklings''' of water down the cave walls''
+
+[[Category:English verbal nouns]]
