--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -78,6 +78,7 @@ Cognate with {{cog|stq|Otter}}, {{cog|nl|otter}}, {{cog|de|Otter}}, {{cog|sv|utt
 * German: {{t+|de|Otter|m}}
 * Greek: {{t+|el|βίδρα|f}}
 *: Ancient: {{t|grc|ἔνυδρις|f}}
+* Halkomelem: {{t|hur|sq'á:tl'}}
 * Hebrew: {{t+|he|לוּטְרָה|f|tr=lútra}}, {{t|he|כֶּלֶב נָהָר|m|tr=kélev nahar}}
 * Hindi: {{t+|hi|ऊदबिलाव|m}}, {{t+|hi|ऊद|m}}
 * Hungarian: {{t+|hu|vidra}}
@@ -94,6 +95,7 @@ Cognate with {{cog|stq|Otter}}, {{cog|nl|otter}}, {{cog|de|Otter}}, {{cog|sv|utt
 * Korean: {{t+|ko|수달}}
 * Kyrgyz: {{t+|ky|кундуз}}
 * Ladin: {{t|lld|lontra|?}}
+* Ladino: {{t+|lad|lontra}}
 * Lao: {{t|lo|ນາກ}}
 * Latgalian: {{t|ltg|iudrys|m}}
 * Latin: {{t|la|lutra|f}}
