--- a/en/e/even so.742278.wikitext
+++ b/en/e/even so.742278.wikitext
@@ -6,7 +6,7 @@
 ===Adverb===
 {{en-adv|-}}
 
-# [[in spite of|In spite of]] [[precede|preceding]] remark or facts within a given discourse.
+# [[in spite of|In spite of]] [[precede|preceding]] a remark (or fact) within a given discourse.
 #: ''His ideas are all wrong. '''Even so''', I want to agree with him.''
 #* {{quote-text|en|year=1928|author={{w|D. H. Lawrence}}|title=Lady Chatterley's Lover|chapter=4|passage="What's wrong with rabbits? Are they any worse than a neurotic, revolutionary humanity, full of nervous hate?"}}
 #*: "But we're not rabbits, '''even so'''," said Hammond.
