--- a/en/r/rasante.802841.wikitext
+++ b/en/r/rasante.802841.wikitext
@@ -9,10 +9,11 @@ From {{etyl|fr|en}} {{m|fr|rasant}}, present participle of {{m|fr|raser||to graz
 ===Adjective===
 {{en-adj}}
 
-# {{lb|en|military|historical}} [[sweep|Sweeping]]; [[graze|grazing]]; applied to a style of [[fortification]] in which the command of the works over each other, and over the country, is kept very low, so that the shot may more effectually sweep or graze the ground before them.
-#: {{rfquotek|en|H. L. Scott}}
+# {{lb|en|military|historical}} [[sweep|Sweeping]]; [[graze|grazing]]; applied to a style of [[fortification]] in which the command of the works over each other, and over the country, is kept very low, so that the shot may more effectually sweep or graze the ground before them<ref>'''1863''', Henry Lee Scott, ''Military Dictionary''</ref>
 
-{{Webster 1913}}
+===References===
+<references/>
+{{R:Webster 1913}}
 
 ===Anagrams===
 * {{anagrams|en|a=aaenrst|Antares|Nateras|Retanas|anearst|anestra|atranes}}
