Changing prime ′ to apostrophe '. The prime does not work well with some screen reader software. <then#62708106>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -48,7 +48,7 @@ From {{inh|en|enm|[[then]]([[thenne|ne]])}}, {{m|enm|[[than]]([[thanne|ne]])}}, 
 # {{lb|en|sequence}} [[at the same time|At the same time]]; [[on the other hand]].
 #: {{ux|en|That’s a nice shirt, but '''then''', so is the other one.}}
 # {{lb|en|UK|dialect|affirmation}} Used to contradict an assertion.
-#* {{quote-text|en|year=2001|author={{w|Eric Malpass}}|title=At the Height of the Moon|page=28|url=http://books.google.com.au/books?id=cClq1igzauQC&pg=PA28&dq=%22She+says+Indian+elephants+are+tidgy+little+things%22&hl=en&sa=X&ei=9gsPT9qlMYeaiQf4kdwu&ved=0CDIQ6AEwAA#v=onepage&q=%22She%20says%20Indian%20elephants%20are%20tidgy%20little%20things%22&f=false|passage=‘She says Indian elephants are tidgy little things.’ <br> ‘They′re not '''then'''.’ Emma was getting heated. ‘They′re –’ <br> ‘Emma!’ said Jenny sharply. The child subsided.}}
+#* {{quote-text|en|year=2001|author={{w|Eric Malpass}}|title=At the Height of the Moon|page=28|url=http://books.google.com.au/books?id=cClq1igzauQC&pg=PA28&dq=%22She+says+Indian+elephants+are+tidgy+little+things%22&hl=en&sa=X&ei=9gsPT9qlMYeaiQf4kdwu&ved=0CDIQ6AEwAA#v=onepage&q=%22She%20says%20Indian%20elephants%20are%20tidgy%20little%20things%22&f=false|passage=‘She says Indian elephants are tidgy little things.’ <br> ‘They're not '''then'''.’ Emma was getting heated. ‘They're –’ <br> ‘Emma!’ said Jenny sharply. The child subsided.}}
 
 ====Synonyms====
 * {{sense|at that time}} {{l|en|at the time}}, {{l|en|back in the day}}
