# {{lb|en|publishing|advertising|ambitransitive}} To (cause to) extend to the edge of the page, without leaving any margin. #* '''1998''', ''Macmillan Dictionary of Marketing and Advertising'' (page 35) #*: Full-page and double-page colour advertisements in the Sunday colour magazines usually '''bleed''' off the page' (or are ''''bled''' to the margin'), {{...}} #* '''2004''', Dorothy A. Bowles, ‎Diane L. Borden, ''Creative Editing'' (page 361) #*: Too, '''bleeding''' beyond margins provides edi <bleed#62732321>

--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -37,6 +37,11 @@ From {{inh|en|enm|bleden}}, from {{inh|en|ang|blēdan||to bleed}}, from {{inh|en
 #* {{RQ:Pope Windsor Forest|passage=For me the balm shall '''bleed'''.}}
 # {{lb|en|phonology|transitive|of a phonological rule}} To destroy the environment where another phonological rule would have applied.
 #: {{ux|en|Labialization '''bleeds''' palatalization.}}
+# {{lb|en|publishing|advertising|ambitransitive}} To (cause to) extend to the edge of the page, without leaving any margin.
+#* '''1998''', ''Macmillan Dictionary of Marketing and Advertising'' (page 35)
+#*: Full-page and double-page colour advertisements in the Sunday colour magazines usually '''bleed''' off the page' (or are ''''bled''' to the margin'), {{...}}
+#* '''2004''', Dorothy A. Bowles, ‎Diane L. Borden, ''Creative Editing'' (page 361)
+#*: Too, '''bleeding''' beyond margins provides editors with several picas of space for more layout.
 
 ====Derived terms====
 {{col3|en
