/* Noun */ # {{lb|en|criminal|_|slang|dated}} [[money|Money]]. #* '''1974''', Martin R. Haskell, ‎Lewis Yablonsky, ''Crime and Delinquency'' (page 96) #*: No matter how much money he makes, he is still a soldier, but he has the '''weight'''. <weight#62732990>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -51,6 +51,9 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 #* '''2002''', Nicholas Dorn, Karim Murji, Nigel South, ''Traffickers: Drug Markets and Law Enforcement'' (page 5)
 #*: [I was] doing a '''weight''' [1 lb. at that time] a week, sometimes more, sometimes less.
 #* {{quote-book|en|year=2009|author=Martina Cole|title=The Ladykiller|passage=The ones the CIB should be looking out for, to her mind, were the officers who raided a flat, found a couple of '''weights''' of cannabis and stashed half of it before they made the collar. The cannabis would make its way back on to the street {{...}}}}
+# {{lb|en|criminal|_|slang|dated}} [[money|Money]].
+#* '''1974''', Martin R. Haskell, ‎Lewis Yablonsky, ''Crime and Delinquency'' (page 96)
+#*: No matter how much money he makes, he is still a soldier, but he has the '''weight'''.
 
 ====Alternative forms====
 * {{l|en|wt.}} {{q|abbreviation}}
