--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -334,7 +334,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Spanish: {{tt+|es|cerdo|m}}, {{tt+|es|chancho|m}} {{qualifier|Argentina|Bolivia|Chile|Costa Rica|Ecuador|Honduras|Nicaragua|Paraguay|Peru|Uruguay}}, {{tt+|es|chon|m}} {{qualifier|Northern Central Spain|specifically Cantabria}}, {{tt+|es|coche|m}} {{qualifier|Guatemala}}, {{tt+|es|cochi|m}} {{qualifier|Northwestern Mexico}}, {{tt|es|cochín|m}} {{qualifier|Northern Spain|specifically Aragon}}, {{tt+|es|cochino|m}} {{qualifier|Mexico|Southwestern Spain and Canary Islands|standard usage in Venezuela}}, {{tt+|es|cocho|m}} {{qualifier|Northern Spain|specifically Leon}}, {{tt+|es|cuchi|m}} {{qualifier|Northern Central and Northwestern Argentina}}, {{tt+|es|cuto|m}} {{qualifier|Northern Spain - specifically Aragon, La Rioja and Navarra}}, {{tt+|es|gocho|m}} {{qualifier|Northern Spain|specifically Asturias and Leon}}, {{tt+|es|gorrino}} {{qualifier|Southern Central and Eastern Central Spain}}, {{tt+|es|guarro|m}} {{qualifier|Western Spain|specifically Extremadura}}, {{tt+|es|marrano|m}} {{qualifier|Central and Western Venezuela|Colombia}}, {{tt+|es|puerco|m}} {{qualifier|Caribbean Islands|Costa Rica|Mexico|Panama}}, {{tt+|es|tocino|m}} {{qualifier|Northern Spain|specifically Aragon}}, {{tt+|es|tunco|m}} {{qualifier|El Salvador}}, {{tt|es|pitzote}} {{qualifier|early modern Mexico}}
 * Swahili: {{tt+|sw|nguruwe}}
 * Swedish: {{tt+|sv|gris|c}}, {{tt+|sv|svin|n}}
-* Sylheti: {{tt|syl|ꠉꠣꠠꠤꠀ}}
+* Sylheti: {{tt|syl|ꠉꠣꠠꠤꠀ}}, {{t|syl|ꠡꠥꠅꠞ}}
 * Tagal Murut: {{tt|mvv|bawi}}, {{tt|mvv|biag}}
 * Tagalog: {{tt+|tl|baboy}}
 * Tajik: {{tt+|tg|хук}}
