t+ar:[[متجه‎]] t-balance t+ko:[[행]] ([[WT:EDIT|Assisted]]) <bound#62736512>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -126,13 +126,15 @@ From {{inh|en|enm|bound}}, {{m|enm|bownde}}, alternation (with '''-d''' partly f
 {{trans-bottom}}
 
 {{trans-top|ready to start or go (to); moving in the direction (of)}}
+* Arabic: {{t|ar|مُتَّجِه‎}}
 * Bulgarian: {{t|bg|на път за}}
 * Dutch: {{qualifier|voor}} {{t+|nl|bestemd}}
 * Hungarian: {{t+|hu|tartó}}, {{t+|hu|induló}}, {{t+|hu|menő}}, {{t+|hu|haladó}}
-* Irish: {{t|ga|ag [[triall]] ar}}
 {{trans-mid}}
+* Irish: {{t|ga|ag [[triall]] ar}}
 * Italian: {{t+|it|diretto}}, {{t+|it|incamminato}}
 * Japanese: {{t+|ja|行き|tr=... yuki no|alt=…行きの|sc=Jpan}}, {{t+|ja|向かう|tr=... ni mukatte|alt=…に向かって|sc=Jpan}}
+* Korean: {{t+|ko|행|alt=—행 (行)}}
 * Russian: {{t+|ru|направляться|alt=направля́ющийся}}
 {{trans-bottom}}
 
