--- a/en/t/TCR.802629.wikitext
+++ b/en/t/TCR.802629.wikitext
@@ -6,6 +6,7 @@
 # {{lb|en|software engineering}} {{abbreviation of|en|[[technical]] [[certification]] [[requirement]]}}: a test case that must pass before software can be certified as compliant to a given standard.
 # {{lb|en|UK|utilities}} {{abbreviation of|en|[[tariff]] [[comparison]] [[rate]]}}
 # {{lb|en|motorsport|uncountable}} {{abbreviation of|en|[[touring car]] [[racing]]}}
+#: {{cot|en|GT}}
 
 ===Anagrams===
 * {{anagrams|en|a=crt|CRT|CTR|Ctr.|RCT|RTC|ctr|ctr.}}
