--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -231,10 +231,7 @@ From {{bor|en|fro|consumer}}, from {{der|en|la|consumo|cōnsūmere}}.
 ===Verb===
 {{head|pt|verb form}}
 
-# {{inflection of|pt|consumar||1|s|pres|subj}}
-# {{inflection of|pt|consumar||3|s|pres|subj}}
-# {{inflection of|pt|consumar||1|s|impr}}
-# {{inflection of|pt|consumar||3|s|impr}}
+# {{pt-verb-form-of|consumar}}
 
 ----
 
