--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -12,7 +12,7 @@ From 16th century {{m|en|cole-florye}}. Compare {{cog|la|caulis}}, {{cog|fr|chou
 * {{audio|en|En-us-cauliflower.ogg|Audio (US cot-caught merged)}}
 
 ===Noun===
-{{en-noun}}
+{{en-noun|~}}
 
 # {{taxlink|Brassica oleracea var. botrytis|variety}}, an annual variety of [[cabbage]], of which the cluster of young flower stalks and buds is eaten as a vegetable.
 #* {{quote-book|en|page=326|author=A Lady [Hannah Glasse]|year=1767|title=The Art of Cookery Made Plain and Eaſy{{...}}|url= https://books.google.co.nz/books?id=pd5QAQAAIAAJ |passage=ASPARAGUS, '''cauliflowers''', imperial Sileſia, royal and cabbage lettuces, burnet, purſlain, cucumbers, naſturtian flowers, peaſe and beans ſown in October, artichokes, ſcarlet ſtrawberries, and kidney beans. }}
