t+it:[[vincolato]] t+it:[[limitato]] ([[WT:EDIT|Assisted]]) <bound#62764491>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -80,7 +80,7 @@ From {{inh|en|enm|bound}}, {{m|enm|bund|pos=preterite}} and {{m|enm|bounden}}, {
 * Finnish: {{t+|fi|sidottu}}
 * Hungarian: {{t+|hu|kötött}}, {{t+|hu|korlátozott}}, {{t|hu|kényszerített}}, {{t|hu|kényszerült}}
 {{trans-mid}}
-* Italian: {{t+|it|obbligato}}, {{t+|it|costretto}}
+* Italian: {{t+|it|obbligato}}, {{t+|it|costretto}}, {{t+|it|vincolato}}, {{t+|it|limitato}}
 * Russian: {{t+|ru|свя́занный}}, {{t+|ru|обяза́нный}}
 * Sanskrit: {{t+|sa|सित}}
 * Spanish: {{t+|es|limitado}}
