t+de:[[erfassen]] t+de:[[packen]] t+de:[[ergreifen]] t-balance ([[WT:EDIT|Assisted]]) <seize#62775809>

--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -150,6 +150,7 @@ Earlier {{m|en|seise}}, from {{inh|en|enm|seisen}}, {{m|enm|sesen}}, {{m|enm|sai
 
 {{trans-top|to have a sudden and powerful effect upon}}
 * French: {{t+|fr|saisir}}
+* German: {{t+|de|erfassen}}, {{t+|de|packen}}, {{t+|de|ergreifen}}
 {{trans-mid}}
 * Portuguese: {{t|pt|[[tomar conta]] [[de]]}}, {{t|pt|[[apoderar]]-[[se]] [[de]]}}
 {{trans-bottom}}
