/* Alternative forms */ edited using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]] <at#62782051>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -1320,7 +1320,7 @@ Cognate with {{cog|yai|ашт}}.
 From {{inh|yol|enm|that}}, from {{inh|yol|ang|þæt}}, from {{inh|yol|gem-pro|*þat}}.
 
 ===Alternative forms===
-* {{alter|yol|et}}
+* {{alter|yol|et|thet}}
 
 ====Conjunction====
 {{head|yol|conjunction}}
