t+cmn:[[水槍]] t-balance ([[WT:EDIT|Assisted]]) <squirt gun#62784015>

--- a/en/s/squirt gun.855129.wikitext
+++ b/en/s/squirt gun.855129.wikitext
@@ -13,6 +13,8 @@
 
 ====Translations====
 {{trans-top|a toy gun used to shoot water}}
+* Chinese:
+*: Mandarin: {{t+|cmn|水槍}}
 * Czech: {{t|cs|stříkací pistole|f}}
 * Danish: {{t+|da|vandpistol|c}}
 * Dutch: {{t+|nl|waterpistool|n}}
@@ -21,8 +23,8 @@
 * German: {{t+|de|Wasserpistole|f}}
 * Greek: {{t|el|νεροπίστολο}}
 * Hebrew: {{t+|he|אֶקְדַּח מַיִם|m|tr=eqdáẖ máyim}}
-* Hungarian: {{t+|hu|vízipisztoly}}
 {{trans-mid}}
+* Hungarian: {{t+|hu|vízipisztoly}}
 * Italian: {{t|it|pistola ad acqua|f}}
 * Japanese: {{t|ja|水鉄砲|tr=mizudeppō}}
 * Korean: {{t+|ko|물총}}
