--- a/en/s/squirt gun.855129.wikitext
+++ b/en/s/squirt gun.855129.wikitext
@@ -14,7 +14,7 @@
 ====Translations====
 {{trans-top|a toy gun used to shoot water}}
 * Chinese:
-*: Mandarin: {{t+|cmn|水槍}}
+*: Mandarin: {{t+|cmn|水槍}}, {{t+|cmn|水枪|tr=shuǐqiāng }}
 * Czech: {{t|cs|stříkací pistole|f}}
 * Danish: {{t+|da|vandpistol|c}}
 * Dutch: {{t+|nl|waterpistool|n}}
