--- a/en/n/no kidding.742290.wikitext
+++ b/en/n/no kidding.742290.wikitext
@@ -14,7 +14,7 @@
 {{trans-top|exclamation of amazement}}
 * Chinese:
 *: Cantonese: {{t|yue|講真|alt=講真？！|sc=Hant}}, {{t|yue|讲真|alt=讲真？！|tr=gong2 zan1?!|sc=Hant}}
-*: Mandarin: {{t+|cmn|當真|alt=當真？！|sc=Hani}}, {{t+|cmn|当真|tr=dàngzhēn?!|alt=当真？！|sc=Hani}}, {{t|cmn|[[不]][[會]][[吧]]？|sc=Hani}}, {{t|cmn|[[不]][[会]][[吧]]？|tr=bù huì ba?|sc=Hani}}
+*: Mandarin: {{t+|cmn|當真|alt=當真？！|sc=Hani}}, {{t+|cmn|当真|tr=dàngzhēn?!|alt=当真？！|sc=Hani}}, {{t|cmn|不會吧|sc=Hani}}, {{t|cmn|不会吧|tr=bùhuìba|sc=Hani}}
 * Finnish: {{t|fi|ihanko totta}}, {{t|fi|ei kai}}
 * French: {{t+|fr|sans blague}}, {{qualifier|colloquial}} {{t+|fr|la vache}}
 * German: {{qualifier|colloquial|vulgar}} {{t|de|ohne Scheiß}}, {{qualifier|colloquial}} {{t|de|im Ernst}}, {{t+|de|echt}}
