/* Italian */ +pron, rel, f r <ligure#62881439>

--- a/en/l/ligure.741746.wikitext
+++ b/en/l/ligure.741746.wikitext
@@ -13,6 +13,9 @@
 
 ==Italian==
 
+===Pronunciation===
+* {{it-IPA|lìgure}}
+
 ===Adjective===
 {{it-adj}}
 
@@ -22,5 +25,11 @@
 {{it-noun|mf}}
 
 # [[Ligurian]]
+
+====Related terms====
+* {{l|it|Liguria}}
+
+===Further reading===
+* {{R:it:Treccani}}
 
 {{C|it|Demonyms}}
