--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -273,8 +273,7 @@ Abbreviation.
 ===Anagrams===
 * {{anagrams|en|a=bet|BTE|TEB}}
 
-[[Category:English irregular verbs]]
-[[Category:English verbs with base form identical to past participle]]
+{{cln|en|irregular verbs|three-letter words|verbs with base form identical to past participle}}
 [[Category:en:Betting]]
 
 ----
