/* Noun */ edited using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]] <CD#62915738>

--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -191,6 +191,9 @@ Borrowed from {{bor|cim|en|CD}}.
 
 # {{l|en|CD}} (compact disk)
 
+====Derived terms====
+* {{l|fr|lecteur CD}}/{{l|fr|lecteur de CD}}
+
 ----
 
 ==German==
