===Etymology 3=== Short for "multi two diamonds".  ====Noun==== {{en-noun|-}} {{wp|Multi two diamonds}}  # {{lb|en|bridge}} A [[contract bridge]] [[convention]] whereby the opening bid of 2♦ shows several possible types of hands. <multi#62916596>

--- a/en/m/multi.34076.wikitext
+++ b/en/m/multi.34076.wikitext
@@ -19,6 +19,15 @@ Shortening of {{m|en|multituberculate}}.
 
 # {{lb|en|informal}} {{taxlink|Neolamprologus multifasciatus|species|ver=190611}} {{gloss|small shell-dwelling [[cichlid]] endemic to Lake Tanganyika, popular as aquarium fish}}
 
+===Etymology 3===
+Short for "multi two diamonds".
+
+====Noun====
+{{en-noun|-}}
+{{wp|Multi two diamonds}}
+
+# {{lb|en|bridge}} A [[contract bridge]] [[convention]] whereby the opening bid of 2♦ shows several possible types of hands.
+
 [[Category:en:Cichlids]]
 
 ----
