--- a/en/p/puit.801598.wikitext
+++ b/en/p/puit.801598.wikitext
@@ -22,7 +22,7 @@
 ====Noun====
 {{en-noun}}
 
-# An insectivorous shore bird, the Brown-headed gull.
+# An insectivorous shore bird, the brown-headed gull.
 #* {{quote-book|en|year=1895| title=Birds, Beasts and Fishes of the Norfolk Broadland |author=Peter Henry Emerson | page=308| passage=But these pirates are always successful, as are the rats, who steal at dead of night upon the eggs, devouring them; for your rat is a deadly enemy to the '''puit''', and many another bird besides.}}
 
 ----
